# frankentui

./: .gitignore  .ubsignore  AGENTS.md  Cargo.toml  FEATURE_PARITY.md  FIXES_SUMMARY.md  Makefile  PLAN_TO_CREATE_FRANKENTUI__OPUS.md  PLAN_TO_PORT_TUI_INSPECTOR_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  REVIEW_REPORT.md  SESSION_TODO.md  UPGRADE_LOG.md  claude-upgrade-progress.json  cursor.mcp.json  frankentui_showcase_demo.html  gemini.mcp.json  perf.data  repro_timetravel_bug.rs  vfx_harness.jsonl
.beads/: issues.jsonl
.github/workflows/: ci.yml  doctor_frankentui_extended.yml
crates/doctor_franktentui/: Cargo.toml
crates/frankenterm-core/: Cargo.toml
crates/frankenterm-web/: Cargo.toml
crates/ftui/: Cargo.toml
crates/ftui-backend/: Cargo.toml
crates/ftui-core/: Cargo.toml
crates/ftui-demo-showcase/: Cargo.toml
crates/ftui-extras/: Cargo.toml
crates/ftui-harness/: Cargo.toml
crates/ftui-i18n/: Cargo.toml
crates/ftui-layout/: Cargo.toml
crates/ftui-pty/: Cargo.toml
crates/ftui-render/: Cargo.toml
crates/ftui-runtime/: Cargo.toml
crates/ftui-showcase-wasm/: Cargo.toml
crates/ftui-simd/: Cargo.toml
crates/ftui-style/: Cargo.toml
crates/ftui-text/: Cargo.toml
crates/ftui-tty/: Cargo.toml
crates/ftui/src/: lib.rs
docs/: WINDOWS.md  telemetry.md
fuzz/: Cargo.toml
scripts/: bench_budget.sh  cross_platform_e2e.sh  demo_showcase_e2e.sh  demo_showcase_screen_sweep_e2e.sh  demo_visual_fx_e2e.sh  doctor_franktentui_coverage.sh  e2e_demo_tour.sh  pane_e2e.sh  pull_latest_reference_library_repos.sh  widget_api_e2e.sh
(+526 files in other folders)
