[package]
name = "ftui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ftui-core = { path = "../ftui-core" }
ftui-render = { path = "../ftui-render" }
ftui-style = { path = "../ftui-style" }
ftui-text = { path = "../ftui-text" }
ftui-layout = { path = "../ftui-layout" }
ftui-runtime = { path = "../ftui-runtime" }
ftui-widgets = { path = "../ftui-widgets" }
ftui-extras = { path = "../ftui-extras" }
